<resources>
    <string name="app_name">ReportIt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Tabs -->
    <string name="all_posts">All</string>
    <string name="my_posts">Me</string>
    <string name="text_test_tab1">Tab 1</string>
    <string name="text_test_tab2">Tab 2</string>

    <string name="home">Home</string>
    <string name="search">Search</string>

    <!-- Login Page -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_question"><u>Forgot password?</u></string>
    <string name="sign_up"><u>or Sign Up</u></string>
    <string name="username_empty_error">The username should not be empty</string>
    <string name="password_empty_error">The password should not be empty or less than 6 characters</string>
    <string name="password_invalid_match">Password and Confirmation didn\'t match </string>
    <string name="username_invalid_error">The username should be an email address</string>
    <string name="remember">Remember</string>

    <!-- Sign Up Page -->
    <string name="name">First Name</string>
    <string name="name_error">First Name empty or invalid</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_error">Last Name empty or invalid</string>
    <string name="skype_id">Skype ID</string>
    <string name="skype_id_empty_error">Skype ID should not be empty</string>
    <string name="cellphone">Cellphone Number</string>
    <string name="cellphone_error">Cellphone number empty or invalid</string>
    <string name="backToLogin">Si ya estas registrado, volver a Login</string>
    <string name="title_sign_up">Create Account</string>
    <string name="password_confirmation">Confirm Password</string>

    <!-- Forgot Password Page -->
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="send_email">Send email</string>
    <string name="forgot_password_message">Enter your email address and we will send you a link to reset your password</string>
    <string name="email_empty_error">The email should not be empty</string>
    <string name="email_invalid_error">The email is not valid</string>
    <string name="failedMessage">Fill fields</string>
    <string name="action_add_favourite">Add to Favorites</string>
    <string name="remove_post">Remove Post</string>
</resources>
