<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.johnmachahuay.reportit.activity.LoginActivity">

        <TextView android:text="@string/app_name"
            android:id="@+id/app_name_text"
            style="@style/loginHeader"/>

        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_below="@id/app_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputUsername"
                style="@style/loginEditText"
                android:inputType="textEmailAddress"
                android:hint="@string/username">
                <requestFocus/>
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_below="@id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPassword"
                style="@style/loginEditText"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>
        <!-- Password Label -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnStyle"
            android:text="@string/login"
            android:layout_below="@+id/tilPassword"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:id="@+id/checkBoxRemember"
            android:layout_below="@+id/btnLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>

        <TextView android:id="@+id/forgot_username_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/loginLink"
            android:text="@string/forgot_password_question"
            android:layout_below="@+id/checkBoxRemember"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"/>

        <TextView android:id="@+id/sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/loginLink"
            android:text="@string/sign_up"
            android:layout_below="@+id/checkBoxRemember"
            android:layout_marginTop="24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</ScrollView>