<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/title_sign_up"
            android:id="@+id/app_name_text"
            style="@style/loginHeader"
            android:textColor="@color/colorPrimaryDark"/>

        <!-- FirstName Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_first_name_til"
            android:layout_below="@id/app_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_first_name_tiet"
                style="@style/loginEditText"
                android:inputType="textCapWords"
                android:hint="@string/name"/>

        </android.support.design.widget.TextInputLayout>

        <!-- LastName Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_last_name_til"
            android:layout_below="@id/signup_first_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_last_name_tiet"
                style="@style/loginEditText"
                android:inputType="textCapWords"
                android:hint="@string/last_name"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_email_til"
            android:layout_below="@id/signup_last_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_email_tiet"
                style="@style/loginEditText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </android.support.design.widget.TextInputLayout>

        <!-- SkypeId Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_skype_id_til"
            android:layout_below="@id/signup_email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_skype_id_tiet"
                style="@style/loginEditText"
                android:inputType="text"
                android:hint="@string/skype_id"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Cellphone Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_cellphone_til"
            android:layout_below="@id/signup_skype_id_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_cellphone_tiet"
                style="@style/loginEditText"
                android:inputType="phone"
                android:hint="@string/cellphone"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_password_til"
            android:layout_below="@id/signup_cellphone_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_password_tiet"
                style="@style/loginEditText"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Conform Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_confirm_password_til"
            android:layout_below="@id/signup_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_confirm_password_tiet"
                style="@style/loginEditText"
                android:inputType="textPassword"
                android:hint="@string/password_confirmation"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Sign Up button -->
        <Button
            android:id="@+id/btnSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnStyle"
            android:text="@string/title_sign_up"
            android:layout_below="@+id/signup_confirm_password_til"/>

    </RelativeLayout>

</ScrollView>